assets/css/theme.css
/* ... */
@font-face {
    font-family: "Lato";
    src: url("../fonts/Lato/lato-italic.eot");
    src: url("../fonts/Lato/lato-italic.eot?#iefix") format("embedded-opentype"), url("../fonts/Lato/lato-italic.woff2") format("woff2"), url("../fonts/Lato/lato-italic.woff") format("woff"), url("../fonts/Lato/lato-italic.ttf") format("truetype");
    font-weight: 400;
    font-style: italic
}

@font-face {
    font-family: "Roboto Slab";
    font-style: normal;
    font-weight: 400;
    src: url("../fonts/RobotoSlab/roboto-slab.eot");
    src: url("../fonts/RobotoSlab/roboto-slab-v7-regular.eot?#iefix") format("embedded-opentype"), url("../fonts/RobotoSlab/roboto-slab-v7-regular.woff2") format("woff2"), url("../fonts/RobotoSlab/roboto-slab-v7-regular.woff") format("woff"), url("../fonts/RobotoSlab/roboto-slab-v7-regular.ttf") format("truetype")
}

@font-face {
    font-family: "Roboto Slab";
    font-style: normal;
    font-weight: 700;
    src: url("../fonts/RobotoSlab/roboto-slab-v7-bold.eot");
    src: url("../fonts/RobotoSlab/roboto-slab-v7-bold.eot?#iefix") format("embedded-opentype"), url("../fonts/RobotoSlab/roboto-slab-v7-bold.woff2") format("woff2"), url("../fonts/RobotoSlab/roboto-slab-v7-bold.woff") format("woff"), url("../fonts/RobotoSlab/roboto-slab-v7-bold.ttf") format("truetype")
}

/* Pyro Extras */

header.header {
    position: fixed;
    left: 0%;
    top: 0%;
    right: auto;
    bottom: auto;
    z-index: 10;
    width: 100vw;
    padding: 20px 6vw;
    background: #fff;
    z-index: 999;
    -webkit-transition: background-color 500ms ease;
    transition: background-color 500ms ease;
}

header .header-container {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-pack: justify;
    -webkit-justify-content: space-between;
    -ms-flex-pack: justify;
    justify-content: space-between;
    -webkit-box-align: center;
    -webkit-align-items: center;
    -ms-flex-align: center;
    align-items: center;
}

header .btns-container {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
}

header .image {
    height: 35px;
    max-width: 100%;
    vertical-align: middle;
    display: inline-block;
    border: 0;
}

header .button {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    width: 160px;
    height: 38px;
    -webkit-box-pack: center;
    -webkit-justify-content: center;
    -ms-flex-pack: center;
    justify-content: center;
    -webkit-box-align: center;
    -webkit-align-items: center;
    -ms-flex-align: center;
    align-items: center;
    border: 1px solid #052882;
    border-radius: 28px;
    background-color: #052882;
    box-shadow: 3px 3px 12px 2px #b3c3ea;
    -webkit-transition: border-color 350ms ease, color 500ms ease, background-color 500ms ease;
    transition: border-color 350ms ease, color 500ms ease, background-color 500ms ease;
    font-size: 16px;
    line-height: 1;
    text-align: center;
    color: #fff;
}

header .button.shadow-none {
    box-shadow: none;
}

header .button.shadow-none.white-btn {
    background-color: #fff;
    color: #052882;
}

header .button.shadow-none.white-btn.try-bc-btn {
    margin-left: 30px;
}

.button:hover {
    background-color: #fff;
    color: #052882;
}

.button.shadow-none.white-btn.try-bc-btn:hover {
    background-color: #052882;
    color: #fff;
}

.button.shadow-none:hover {
    background-color: #fff;
    color: #052883;
}

footer.footer {
    position: relative;
    width: 100vw;
    padding: 20px 8vw;
    background-color: #194ac6;
    left: -350px;
    z-index: 999;
    top: 26px;
}

footer .footer-container {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-align: start;
    -webkit-align-items: flex-start;
    -ms-flex-align: start;
    align-items: flex-start;
}

footer .footer-logo-wrapper {
    margin-right: 6vw;
    color: #fff;
    font-size: 15px;
    line-height: 18px;
    text-decoration: none;
}

footer .powered-text {
    margin-bottom: 5px;
}

footer img.bridge-logo {
    height: 40px;
    max-width: 100%;
    vertical-align: middle;
    display: inline-block;
    border: 0;
}

footer .footer-links-list {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    width: 45vw;
    margin-bottom: 0px;
    -webkit-flex-wrap: wrap;
    -ms-flex-wrap: wrap;
    flex-wrap: wrap;
    padding-left: 0;
    list-style: none;
}

footer .footer-li {
    width: 25%;
    margin-top: 0px;
    margin-bottom: 10px;
    font-size: 0.9vw;
    line-height: 1.5vw;
    font-weight: 200;
}

.footer-link {
    color: #fff;
    text-decoration: none;
}

footer .visit-on-text {
    margin-bottom: 5px;
    color: #fff;
    font-size: 0.9vw;
    line-height: 1.5vw;
    font-weight: 200;
}

footer .social-links {
    margin-top: 15px;
}

footer .single-social-link.first {
    margin-left: 0px;
}

footer .single-social-link {
    margin-right: 10px;
    margin-left: 10px;
}

footer .single-social-link.last {
    margin-right: 0px;
}

footer .social-img {
    height: 24px;
}


@media screen and (max-width: 1024px) {
    footer .footer-li .footer-link {
        background-image: linear-gradient(to bottom, currentColor 25%, transparent 25%);
        background-repeat: no-repeat;
        background-size: 0% 3px;
        background-position-x: right;
        background-position-y: bottom;
        padding-bottom: 3px;
        transition: background-size 0.3s, filter .6s, color .6s, opacity .6s !important;
    }

    footer .footer-li:hover .footer-link {
        background-position-x: left;
        background-size: 100% 3px;
    }
}

.dropdown-title {
    cursor: pointer;
}

.dropdown-content {
    height: 0px;
    overflow: hidden;
    transition: height .6s ease;
}

